# OpenGL-Compute

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  g_tree.cpp  g_tree.h  main.cpp  platform.cpp  r_main.cpp  r_main.h  r_shader.cpp  r_shader.h  taiwan.h  utils.cpp  utils.h
src/dependencies/glad/include/glad/: gl.h
src/dependencies/glad/src/: gl.c
src/shaders/: build_tree_compute_shader.glsl  compute_shader.glsl  fragment_shader.glsl  orient_branches_compute_shader.glsl  vertex_shader.glsl
